--- a/app/scss/layout/_navbar.scss
+++ b/app/scss/layout/_navbar.scss
@@ -31,7 +31,8 @@ body {
 	}
 
 	@media(min-width: 30rem) and (min-height: 30rem){
-		padding: 0 5vw;
+		flex-wrap: nowrap;
+		padding: $padding-small;
 	}
 }
 
@@ -60,8 +61,9 @@ body {
 	}
 
 	@media(min-width: 30rem) and (min-height: 30rem) {
-		justify-content: space-between;
-		width: 30rem;
+		padding: $padding-small;
+		flex-wrap: nowrap;
+		justify-content: flex-end;
 		margin-left: $margin-medium;
 		transform: translateX(0);
 		top:0 ;
@@ -75,10 +77,12 @@ body {
 	
 
 	&__item{
+		position: relative;
 		max-width: 15rem;
 		font-size: $size-description;
 		opacity: 0;
 		background-color: $color-main;
+		
 		text-align: center;
 		list-style: none;
 		display: block;
@@ -89,44 +93,23 @@ body {
 			opacity: 1;
 		}
 
-		&:hover {
-			transform: rotateZ(5deg);
-			transition:  transform 0.3s ease-in;
-			color: #fff;
-		}
-
-		&:after{
-			border-radius: 3px;
-			position: absolute;
-			content: '';
-			background-color: $color-accent;
-			border: none;
-			top: 0;
-			right: 0;
-			height: 0%;
-			width: 5px;
-		}
-
 		&:before{
+			
 			border-radius: 3px;
 			position: absolute;
 			content: '';
 			background-color: $color-accent;
+			background: linear-gradient(to left, $color-accent, darken($color-accent, 30%));
 			border: none;
 			bottom: -4px;
-			right: 0;
+			left: 30%;
 			height: 5px;
 			width: 0%;
 		}
 
-		&:hover::after,
-		&:active::after{
-			animation: button-load 2s forwards;
-		}
-
 		&:hover::before,
 		&:active::before{
-			animation: button-load-bottom 2s forwards 2s;
+			animation: button-load-bottom 0.5s forwards 0s;
 		}
 
 		.link {
@@ -140,6 +123,11 @@ body {
 
 			@media(min-width: 30rem){
 				padding: $padding-medium;
+			}
+
+			@media(min-width: 30rem) and (min-height: 30rem){
+				padding: $padding-small;
+				font-size: $size-description * 0.7;
 			}
 		}
 		
@@ -206,18 +194,6 @@ body {
 		transition: transform 1s ease-in;
 	}
 
-
-	/* Animations */
-	@keyframes button-load {
-		0%{
-			height: 0%;
-		}
-	
-		100% {
-			height: 100%;
-			
-		}
-	}
 	
 	@keyframes button-load-bottom {
 		0%{
@@ -225,7 +201,7 @@ body {
 		}
 	
 		100% {
-			width: 100%;
+			width: 40%;
 			
 		}	
 	} 
